--- a/css/styles-sass.scss
+++ b/css/styles-sass.scss
@@ -162,7 +162,7 @@ ul.languages {
 }
 
 @media screen and (max-width: 720px){
-	.parallax-text-wrapper {
+	.parallax-internhacks, .parallax-googlejump {
 		display: inline-block;
 		z-index: 0;
 	}
